force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Burndown_Item__c/fields/agf__Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>