force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Burndown_Item__c/fields/agf__Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>agf__Days_Remaining__c</fullName>
    <description>Stores the days remaining in the current sprint. Do not modify by hand as this is used by Apex for burndown calculation.</description>
    <label>Days Remaining</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>