force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Burndown_Item__c/fields/agf__Points_Remaining__c.field-meta.xml
<CustomField>
    <fullName>agf__Points_Remaining__c</fullName>
    <label>Points_Remaining</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>