force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Burndown_Item__c/fields/agf__Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Burndown Items</relationshipLabel>
    <relationshipName>Burndown_Items</relationshipName>
    <type>Lookup</type>
</CustomField>