force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Burndown_Item__c/fields/agf__Sprint__c.field-meta.xml
<CustomField>
    <fullName>agf__Sprint__c</fullName>
    <label>Sprint</label>
    <referenceTo>agf__ADM_Sprint__c</referenceTo>
    <relationshipLabel>Burndown Items</relationshipLabel>
    <relationshipName>Burndown_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>