force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Burndown_Item__c/fields/agf__Task__c.field-meta.xml
<CustomField>
    <fullName>agf__Task__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  agf__Task_ID__c , &quot;TASK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task</label>
    <type>Text</type>
</CustomField>