force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Burndown_Item__c/fields/agf__Task_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Task_ID__c</fullName>
    <label>Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>