force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Burndown_Item__c/fields/agf__Upsert_Key__c.field-meta.xml
<CustomField>
    <fullName>agf__Upsert_Key__c</fullName>
    <description>This field value will uniquely identify a burndown item using the following format: &lt;SPRINT_ID&gt;&lt;YYYYMMDD&gt;&lt;A/B&gt; Where &lt;A/B&gt; indicates whether it&apos;s the Actual or the Baseline figure</description>
    <externalId>true</externalId>
    <label>Upsert Key</label>
    <length>27</length>
    <type>Text</type>
</CustomField>